# csa-warehouse

./: .env.example  .gitignore  LICENSE  package-lock.json  package.json
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
backend/: README.md  client_upload.py  crud.py  database.py  main.py  minio_service.py  models.py  openapi_spec.yaml  pyproject.toml
backend/app/: main.py
backend/app/api/endpoints/: browse.py  dataset_info.py  datasets.py  files.py  manage.py  pipeline.py
backend/app/config/: logging.py  pipeline_mapping.py  settings.py
backend/app/db/: crud.py  database.py
backend/app/schemas/: models.py
backend/app/services/storage/: base_storage.py  minio_service.py  mongodb_service.py
backend/app/services/tasks/: task_executor.py
backend/app/utils/: csv_processor.py  erp.py  file_utils.py
backend/app/warehouse/: register_tasks.py  task_definitions.py  task_manager.py
backend/cloud_functions/api/: executor.py
backend/cloud_functions/rpc_server/: introspection.py
backend/db/: crud.py  models.py
backend/services/: client_upload.py
backend/services/cloud_functions/: executor.py
backend/services/cloud_functions/server/: custprocess.py
frontend/: .env.example  openapi-ts.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/app/(public)/: layout.tsx  (+1 more)
frontend/src/components/: app-sidebar.tsx  dialog.tsx  feature-card.tsx  logindialogue.tsx  mode-toggle.tsx  nav-main.tsx  sidebar.tsx  theme-toggle.tsx
frontend/src/lib/: menu-list.ts  utils.ts
frontend/src/types/: global.d.ts
(+64 files in other folders)
