[project]
name = "backend"
version = "0.1.0"
description = "The backend for the Agriworks platform"
package-mode = false
authors = [
    {name = "Abhigna Revuru",email = "21285441+abhignarevuru@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pymongo (>=4.13.2,<5.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "minio",
    "pandas"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
openapi-generator-cli = "^7.13.0.post0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
